update the user schemas

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # Environment: local, staging, production
 ENVIRONMENT=local
 
+PROJECT_NAME = flask_project
+
 # Domain
 # This would be set to the production domain with an env var on deployment
 DOMAIN=localhost
@@ -11,3 +13,4 @@ POSTGRES_PORT=5432
 POSTGRES_USER=user
 POSTGRES_PASSWORD=1234
 POSTGRES_DB=app
+
