--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "module": "flask",
             "env": {
                 "FLASK_APP": "backend\\app\\main.py",
-                "FLASK_DEBUG": "1"
+                "FLASK_DEBUG": "1",
+                "FLASK_RUN_PORT": "5001",
             },
             "args": [
                 "run",
