update feature with openapi

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,11 +16,11 @@
             },
             "args": [
                 "run",
-                "--no-debugger",
-                "--no-reload"
+                // "--no-debugger",
+                // "--no-reload"
             ],
             "jinja": true,
-            "autoStartBrowser": false
+            "autoStartBrowser": false,
         }
     ]
 }
